--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,14 +17,14 @@
                 </ul>
             </div>
             <div class="social-icons col-sm-6 text-right text-center-xs">
-                <a class="btns" target="_blank" href="mailto:hola@vlctechhub.org">
+                <a class="btns" target="_blank" href="mailto:widsvalencia@gmail.com">
                     <i aria-hidden="true" class="fa fa-envelope-o fa-lg"></i>
                 </a>
-                <a class="btns" target="_blank" href="https://twitter.com/vlctechhub">
+                <!-- <a class="btns" target="_blank" href="https://twitter.com/vlctechhub">
                     <i aria-hidden="true" class="fa fa-twitter fa-lg"></i>
                 </a>
                 <a class="btns" target="_blank" href="https://github.com/vlctechhub/">
-                    <i aria-hidden="true" class="fa fa-github fa-lg"></i>
+                    <i aria-hidden="true" class="fa fa-github fa-lg"></i> -->
                 </a>
                 <br>
             </div>
