--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -3,22 +3,14 @@
     <h2>El evento</h2>
     <hr>
     <p>
-    <a href="https://vlctechhub.org">VLCTechHub</a>, <a href="https://devwomen.com">DevWomen</a> y <a href="https://femdevs.org">FemDevs</a> te invitan a asistir al café coloquio "<strong>¿Es necesario comportarse como un hombre para ser una mujer de éxito en tecnología?</strong>" donde mujeres profesionales nos contaran sus experiencias laborales y familiares para ver cómo afrontar el mundo de la tecnología desde un punto de vista femenino.
-      </p>
-      <p>
-      La conversación seguirá una dinámica <a href="https://en.wikipedia.org/wiki/Fishbowl_(conversation)">fishbowl</a>, donde los asistentes se pueden unir de forma sencilla y espontánea con comentarios o preguntas. Después del coloquio habrá tiempo para hacer networking.
-      </p>
-  </div>
- <div>
-    <h2>11 de febrero</h2>
-    <hr>
-    <p>
-    En una época en que la mayor parte de los retos que se nos presentan (crisis energética, crisis medioambiental, crisis alimentaria, retos en medicina y en calidad de vida…) dependen de la Ciencia y la Tecnología, no nos podemos permitir prescindir del talento de la mitad de la población. </p>
-
-    <p>La iniciativa <a href="https://11defebrero.org">11 de Febrero</a> pretende fomentar la organización de actividades y materiales que conmemoren el día Internacional de la Mujer y la niña en Ciencia en España. Su objetivo es contribuir a cerrar la brecha de género que actualmente existe en el ámbito científico. Para ello quieren llenar las agendas de actividades que conmemoren ese día, actividades que ayuden a visibilizar el trabajo de las científicas, a crear roles femeninos en los ámbitos de la ciencia y la ingeniería y que promuevan prácticas que favorezcan la igualdad de género en el ámbito científico.</p>
-
-    <p>Las actividades promovidas por 11 de Febrero se dividen en charlas en centros educativos y actividades generales. El evento "Café coloquio con tecnólogas" es una actividad general.</p>
+      WiDS Valencia es la primera edición, en la comunidad valenciana, de la Conferencia anual Global Women in Data Science (WiDS) celebrada por la Universidad de Stanford  que se lleva a cabo en más de 150 ciudades en todo el mundo. 
     </p>
-    <img src="assets/images/cartel-11f-sin-titulo.jpg" alt="11 de Febrero, día de la mujer y la niña en la ciencia">
+    <p>
+      Personas de todos los géneros están invitadas a asistir a los eventos regionales de WiDS, que tienen como objetivo inspirar y educar a los científicos de datos, sin restricción global, a través de mujeres que se destacan por su trabajo excepcional, así que además, contribuye a la visibilidad de ellas en este campo.          
+    </p> 
+    <p>
+      Esta conferencia técnica de un día ofrece la oportunidad de entablar relación con las últimas investigaciones y aplicaciones relacionadas a la ciencia de datos en una serie de dominios y a crear conexiones con profesionales.       
+    </p>
+    <img src="assets/images/g1012.png" alt="Logotipo Women in Data Science">
   </div>
 </section>
