--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -6,16 +6,13 @@
             <div class="col-md-8 col-md-offset-2 col-sm-12">
                 <h2>Contacto</h2>
                 <hr>
-                <ul class="list-inline">
+                <ul class="list-inline">                    
                     <li>
-                        <a href="https://twitter.com/vlctechhub" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="mailto:hola@vlctehhub.org" target="_blank"><i class="fa fa-envelope-o fa-lg"></i></a>
+                        <a href="mailto:widsvalencia@gmail.com" target="_blank"><i class="fa fa-envelope-o fa-lg"></i></a>
                     </li>
                 </ul>
                 <br>
-                <p>Mandanos un mail con tus preguntas o comentarios a <a href="mailto:hola@vlctechhub.org">hola@vlctechhub.org</a>
+                <p>Mandanos un mail con tus preguntas o comentarios a <a href="mailto:widsvalencia@gmail.com">widsvalencia@gmail.com</a>
                 </p>
             </div>
         </div>
