--- a/_includes/sections/apply.html
+++ b/_includes/sections/apply.html
@@ -3,12 +3,9 @@
     <h1>
       Reserva tu entrada
     </h1>
-    <hr>
+    <hr>      
       <p>
-      Recuerda que es un evento gratuito con consumición mínima en el local.
-      </p>
-      <p>
-        Por temas logísticos nos gustaría tener una previsión de las personas que asistiran al evento. Si estás interesad@ en asistir, reserva tu entrada. Usa tu reserva con netiqueta, si tus planes cambian libérala para que otra persona pueda asistir en tu lugar.
+        Por temas logísticos nos gustaría tener una previsión de las personas que asistiran al evento. Si estás interesad@ en asistir, reserva tu entrada. 
       </p>
       <p>
         <a class="cta" href="{{site.attendees_form}}" target="_blank">Obtén tu entrada</a>
