--- a/_includes/sections/location.html
+++ b/_includes/sections/location.html
@@ -4,9 +4,9 @@
                 Lugar
               </h2>
               <hr>
-                <p>El evento tendrá lugar en Mescafe, Plaza de Honduras 8, el jueves 7 de febrero a las 18:30h</p>
+                <p>El evento tendrá lugar en la UPV - Escuela Técnica Superior de Ingeniería Informática ETSINF, el lunes 4 de marzo a las 15:00h</p>
             </div>
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.7812401406563!2d-0.3462003848613767!3d39.474270520338834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd60488f98c253f7%3A0xd9ab8ab4391a3549!2sMescafe!5e0!3m2!1ses!2sbr!4v1542983465539" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12317.599316700647!2d-0.3480605!3d39.4828854!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xded925519ef13eaf!2sUPV+-+Escuela+T%C3%A9cnica+Superior+de+Ingenier%C3%ADa+Inform%C3%A1tica+ETSINF!5e0!3m2!1ses!2ses!4v1549285856212" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 </section>
