--- a/_includes/sections/speakers.html
+++ b/_includes/sections/speakers.html
@@ -1,7 +1,7 @@
 <section id="speakers" class="section-accent">
   <div>
     <h1>
-      Ponentes iniciales del coloquio
+      Ponentes de la jornada
     </h1>
     <hr>
     <div class="speakers">
