--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@
 
     <!-- for Google -->
     <meta name="description" content="{{site.description}}"/>
-    <meta name="keywords" content="{{site.keywords}}"/
+    <meta name="keywords" content="{{site.keywords}}"/>
     <meta name="author" content="VLCTechHub"/>
     <meta name="theme-color" content="#fa0">
     <meta name="copyright" content="VLCTechHub"/>
@@ -35,7 +35,7 @@
     <title>{%if page.title %}{{page.title}} | {%endif%}{{site.title}}</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/wids.ico" type="image/x-icon">
 
     <!-- Reset CSS -->
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -59,16 +59,6 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/1.2.0/trianglify.min.js"></script>
-<script>
-  var pattern = Trianglify({
-    width: window.innerWidth,
-    height: window.innerHeight,
-    x_colors: 'GnBu'
-  });
-    document.body.appendChild(pattern.canvas())
-</script>
 
 </body>
 
