--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -35,7 +35,7 @@
     <title>{%if page.title %}{{page.title}} | {%endif%}{{site.title}}</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/wids.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo_icon.png" type="png">
 
     <!-- Reset CSS -->
     <link rel="stylesheet" href="assets/css/reset.css">
