--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -3,10 +3,10 @@
     <h2>El evento</h2>
     <hr>
     <p>
-      WiDS Valencia es la primera edición, en la comunidad valenciana, de la Conferencia anual Global Women in Data Science (WiDS) celebrada por la Universidad de Stanford  que se lleva a cabo en más de 150 ciudades en todo el mundo. 
+      WiDS Valencia es la primera edición, en la comunidad valenciana, de la <a rel="external" target="_blank" href="https://www.widsconference.org">Conferencia Global Women in Data Science (WiDS) celebrada por la Universidad de Stanford</a>  que se lleva a cabo en más de 150 ciudades en todo el mundo. 
     </p>
     <p>
-      Personas de todos los géneros están invitadas a asistir a los eventos regionales de WiDS, que tienen como objetivo inspirar y educar a los científicos de datos, sin restricción global, a través de mujeres que se destacan por su trabajo excepcional, así que además, contribuye a la visibilidad de ellas en este campo.          
+      Personas de todos los géneros están invitadas a asistir a los eventos regionales de WiDS, que tienen como objetivo inspirar y educar a los científicos de datos a través de mujeres que se destacan por su trabajo excepcional, así que además, contribuye a la visibilidad de ellas en este campo.          
     </p> 
     <p>
       Esta conferencia técnica de un día ofrece la oportunidad de entablar relación con las últimas investigaciones y aplicaciones relacionadas a la ciencia de datos en una serie de dominios y a crear conexiones con profesionales.       
