Fixes several typos, fixes empty twitter tags, correctly indents code.

--- a/_includes/sections/apply.html
+++ b/_includes/sections/apply.html
@@ -3,9 +3,9 @@
     <h1>
       Reserva tu entrada
     </h1>
-    <hr>      
+    <hr>
       <p>
-        Por temas logísticos nos gustaría tener una previsión de las personas que asistiran al evento. Si estás interesad@ en asistir, reserva tu entrada. 
+        Por temas logísticos nos gustaría tener una previsión de las personas que asistirán al evento. Si estás interesad@ en asistir, reserva tu entrada.
       </p>
       <p>
         <a class="cta" href="{{site.attendees_form}}" target="_blank">Obtén tu entrada</a>
