--- a/_includes/sections/speakers.html
+++ b/_includes/sections/speakers.html
@@ -10,15 +10,17 @@
         <img src={{speaker.avatar}} alt={{speaker.name}} class="avatar">
         <h3>{{speaker.name}}</h3>
         <p class="twitter">
+        {% if speaker.twitter != "" and speaker.twitter != nil %}
           <a href="https://twitter.com/{{speaker.twitter}}" target="_blank" title={{speaker.twitter}}>
           @{{speaker.twitter}}
           </a>
+        {% endif %}
         <p>
         <p class="bio">
          {{speaker.bio}}
         </p>
       </div>
-      {%endfor%}
+      {% endfor %}
     </div>
   </div>
 </section>
