--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,9 +13,9 @@
     <!-- for Google -->
     <meta name="description" content="{{site.description}}"/>
     <meta name="keywords" content="{{site.keywords}}"/>
-    <meta name="author" content="VLCTechHub"/>
+    <meta name="author" content="Ana Cecilia Vieira"/>
     <meta name="theme-color" content="#fa0">
-    <meta name="copyright" content="VLCTechHub"/>
+    <meta name="copyright" content="Ana Cecilia Vieira"/>
     <meta name="application-name" content="{{site.title}}"/>
 
     <!-- for Facebook -->
