--- a/_includes/sections/faq.html
+++ b/_includes/sections/faq.html
@@ -1,4 +1,4 @@
-<section id="faq" class="section-reverse">
+<section id="faq" class="section-accent">
     <div>
         <h2>FAQ <br>
             <small>Todas las preguntas importantes. Contestadas.</small>
