--- a/_includes/sections/workshop.html
+++ b/_includes/sections/workshop.html
@@ -1,7 +1,7 @@
 <section id="workshops" class="section-accent">
   <div>
     <h1>
-      Talleres
+      Talleres 15:30 - 18:30
     </h1>
     <hr>
     <div class="workshops">
