--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -6,7 +6,7 @@
 <header>
   <section id="intro">
   <h1 class="title">Women in Data Science Valencia </h1>
-  <h2>4 de marzo 2019 / 15:30: Taller / 18:50: Conferencia / Universitat Politècnica de València</h2>
+  <h2>4 de marzo 2019 / 15:30: Taller / 18:50: Conferencia / Salón de actos, ETSINF, UPV</h2>
 
   <p>
   <a class="cta" href="{{site.attendees_form}}" target="_blank">Obtén tu entrada</a>
