--- a/_includes/sections/partners.html
+++ b/_includes/sections/partners.html
@@ -1,4 +1,5 @@
 <section id="partners">
+<div class="section-heading">
 <div>
     <h2>Organizan</h2>
     <hr>
@@ -31,5 +32,6 @@
     <h2>Equipo organizador</h2>
     <hr>
     <p><a rel="external" target="_blank" href="https://www.linkedin.com/in/cecivieira/">Ana Cecília Vieira</a> / <a rel="external" target="_blank" href="https://www.linkedin.com/in/andrea-naranjo-chávez/">Andrea Naranjo</a> / <a rel="external" target="_blank" href="https://www.linkedin.com/in/antonia-ferrer-797b065/">Antonia Ferrer-Sapena</a> / <a rel="external" target="_blank" href="https://www.linkedin.com/in/davidhernandezruiz1">David Hernández</a> / <a rel="external" target="_blank" href="https://www.linkedin.com/in/fernanda-peset-4236508/">Fernanda Peset</a> / <a rel="external" target="_blank" href="https://www.linkedin.com/in/iajorodriguez/">María José Rodriguez</a></p>
+</div>
 </div>
 </section>
