--- a/_includes/sections/workshop.html
+++ b/_includes/sections/workshop.html
@@ -8,6 +8,7 @@
       {% for workshop in site.data.workshop %}
       <div class="workshop">        
         <h3>{{workshop.name}}</h3>  
+        
         <p class="twitter">
           {% if workshop.twitter != "" and workshop.twitter != nil %}
             <a href="https://twitter.com/{{workshop.twitter}}" target="_blank" title={{workshop.twitter}}>
@@ -15,6 +16,7 @@
             </a>
           {% endif %}
         </p>
+        <h4>{{workshop.local}}</h4> 
         <p class="summary">
          {{workshop.summary}}
         </p>
