--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,43 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="logo" href="#">
-                <img alt="Logo WiDS Valencia" src="assets/images/logo_widsvlc.png" width=120px>
+
+            <a class="navbar-brand" href="#">
+               <img alt="logo WiDS Valencia" src="/assets/images/wids-navbar.png" width="50px">
             </a>
+
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            
         </div>
-    </div>
+    
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#about">Acerca de WiDS</a></li>
+                <li><a href="#schedule">Agenda</a></li>
+                <li><a href="#speakers">Ponentes</a></li>
+                <li><a href="#workshops">Talleres</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#partners">Colaboradores</a></li>
+               
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ediciones<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">WiDS 2020</a></li>
+                </ul>
+                </li>
+
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->   
 </nav>
+
+<script src="/assets/lib/jquery.min.js"></script>
+<script src="/assets/lib/bootstrap.min.js"></script>
