--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,10 +1,16 @@
 <header>
-  <section id="intro">
-  <h1 class="title">Women in Data Science Valencia </h1>
-  <h2>4 de marzo 2019 / 15:30: Taller / 18:50: Conferencia / Salón de actos, ETSINF, UPV</h2>
+    <section id="intro">
+        <div class="logo">
+            <a href="/" rel="canonical">
+                <img src="assets/images/logo_widsvlc.png" alt="logo WiDS Valencia">
+            </a>
+        </div>
+    
+        <div class="intro__text">
+            <h1 class="title">Women in Data Science Valencia </h1>            
+            <h2>4 de marzo 2019 | 15:30: Taller | 18:50: Conferencia</h2>
+            <h2>Salón de actos, ETSINF, UPV</h2>
+        </div>          
+    </section>
 
-  <p>
-  <a class="cta" href="{{site.attendees_form}}" target="_blank">Obtén tu entrada</a>
-  </p>
-  </section>
-</header>
+</header>   
