Change number of columns

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -293,7 +293,7 @@ footer {
 
 .speakers {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 80px;
   margin-bottom: 60px;
 }
