--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,7 +30,8 @@
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ediciones<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">WiDS 2020</a></li>
+                    <li><a href="../index_2020.html">WiDS 2020</a></li>
+                    <li><a href="../index.html">WiDS 2019</a></li>
                 </ul>
                 </li>
 
