Delete apply section

--- a/_includes/sections/workshop.html
+++ b/_includes/sections/workshop.html
@@ -1,4 +1,4 @@
-<section id="workshops" class="section-accent">
+<section id="workshops" class="section-reverse">
   <div>
     <h1>
       Talleres 15:30 - 18:30
