--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,10 +20,10 @@
                 <a class="btns" target="_blank" href="mailto:widsvalencia@gmail.com">
                     <i aria-hidden="true" class="fa fa-envelope-o fa-lg"></i>
                 </a>
-                <!-- <a class="btns" target="_blank" href="https://twitter.com/vlctechhub">
+                <a class="btns" target="_blank" href="https://twitter.com/widsvalencia">
                     <i aria-hidden="true" class="fa fa-twitter fa-lg"></i>
                 </a>
-                <a class="btns" target="_blank" href="https://github.com/vlctechhub/">
+               <!--  <a class="btns" target="_blank" href="https://github.com/vlctechhub/">
                     <i aria-hidden="true" class="fa fa-github fa-lg"></i> -->
                 </a>
                 <br>
