--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,13 +24,14 @@
     <meta property="og:image:secure_url" content="{{site.ogimage}}>
     <meta property="og:url" content="https://vlctechhub.org"/>
     <meta property="og:description" content="{{site.description}}"/> -->
+    
     <!-- for Twitter -->
-    <!-- <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="{{site.title}}"/>
-    <meta name="twitter:site" content="@vlctechhub">
-    <meta name="twitter:creator" content="@vlctechhub">
+    <meta name="twitter:site" content="@widsvalencia">
+    <meta name="twitter:creator" content="@widsvalencia">
     <meta name="twitter:description" content="{{site.description}}"/>
-    <meta name="twitter:image" content="{{site.ogimage}}"/> -->
+    <meta name="twitter:image" content="{{site.ogimage}}"/>
 
     <title>{%if page.title %}{{page.title}} | {%endif%}{{site.title}}</title>
 
