--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -11,6 +11,6 @@
     <p>
       Esta conferencia técnica de un día ofrece la oportunidad de entablar relación con las últimas investigaciones y aplicaciones relacionadas a la ciencia de datos en una serie de dominios y a crear conexiones con profesionales.       
     </p>
-    <img src="assets/images/g1012.png" alt="Logotipo Women in Data Science">
+    <img src="assets/images/2019/logo-wids-about.png" alt="Logotipo Women in Data Science">
   </div>
 </section>
