--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -372,7 +372,7 @@ footer {
 }
 
 body {
-  background-image: url('/assets/images/5.jpg');
+  background-image: url('/assets/images/background.jpg');
 }
 
 #partners,
