Create folder _data/2019

--- a/_includes/sections/faq.html
+++ b/_includes/sections/faq.html
@@ -5,7 +5,7 @@
         </h2>
         <hr>
         <div class="col-md-4 question">
-            {% for faq in site.data.faq %}
+            {% for faq in site.data.2019.faq %}
             {% capture modulo %}{{ forloop.index | modulo: 3 }}{% endcapture %}
             {% if modulo == '0' %}
             <h3>{{faq.question}}</h3>
@@ -14,7 +14,7 @@
             {%endfor%}
         </div>
         <div class="col-md-4 question">
-            {% for faq in site.data.faq %}
+            {% for faq in site.data.2019.faq %}
             {% capture modulo %}{{ forloop.index | modulo: 3 }}{% endcapture %}
             {% if modulo == '1' %}
             <h3>{{faq.question}}</h3>
@@ -23,7 +23,7 @@
             {%endfor%}
         </div>
         <div class="col-md-4 question">
-            {% for faq in site.data.faq %}
+            {% for faq in site.data.2019.faq %}
             {% capture modulo %}{{ forloop.index | modulo: 3 }}{% endcapture %}
             {% if modulo == '2' %}
             <h3>{{faq.question}}</h3>
