--- a/_includes/sections/speakers.html
+++ b/_includes/sections/speakers.html
@@ -5,7 +5,7 @@
     </h1>
     <hr>
     <div class="speakers">
-      {% for speaker in site.data.speakers %}
+      {% for speaker in site.data.2019.speakers %}
       <div class="speaker">
         <img src={{speaker.avatar}} alt={{speaker.name}} class="avatar">
         <h3>{{speaker.name}}</h3>
