--- a/_includes/sections/workshop.html
+++ b/_includes/sections/workshop.html
@@ -5,7 +5,7 @@
     </h1>
     <hr>
     <div class="workshops">
-      {% for workshop in site.data.workshop %}
+      {% for workshop in site.data.2019.workshop %}
       <div class="workshop">        
         <h3>{{workshop.name}}</h3>  
         
