--- a/_includes/sections/partners.html
+++ b/_includes/sections/partners.html
@@ -4,7 +4,7 @@
     <h2>Organizan</h2>
     <hr>
     <ul class="partners ">
-        {% for partner in site.data.partners  %}
+        {% for partner in site.data.2019.partners  %}
         <li>
             <a href="{{partner.url}}" target="_blank">
                 <img src="{{partner.image-url}}" alt="{{partner.name}} logo">
@@ -18,7 +18,7 @@
     <h2>Colaboran</h2>
     <hr>
     <ul class="partners ">
-        {% for partner in site.data.partners2  %}
+        {% for partner in site.data.2019.partners2  %}
         <li>
             <a href="{{partner.url}}" target="_blank">
                 <img src="{{partner.image-url}}" alt="{{partner.name}} logo">
