--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -143,6 +143,11 @@ section {
   }
 }
 
+.button__ticket{
+  display: flex;
+  justify-content: center;
+}
+
 .logo {
   display: flex;
   justify-content: center;
