--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,7 +31,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ediciones<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="../index_2020.html">WiDS 2020</a></li>
-                    <li><a href="../index.html">WiDS 2019</a></li>
+                    <li><a href="../index_2019.html">WiDS 2019</a></li>
                 </ul>
                 </li>
 
