--- a/_includes/sections_2020/about.html
+++ b/_includes/sections_2020/about.html
@@ -3,7 +3,7 @@
     <h2>El evento</h2>
     <hr>
     <p>
-      WiDS Valencia es la primera edición, en la Comunitat Valenciana, de la <a rel="external" target="_blank" href="https://www.widsconference.org">Conferencia Global Women in Data Science (WiDS) celebrada por la Universidad de Stanford</a>  que se lleva a cabo en más de 150 ciudades en todo el mundo. 
+      WiDS Valencia es la segunda edición, en la Comunitat Valenciana, de la <a rel="external" target="_blank" href="https://www.widsconference.org">Conferencia Global Women in Data Science (WiDS) celebrada por la Universidad de Stanford</a>  que se lleva a cabo en más de 150 ciudades en todo el mundo. 
     </p>
     <p>
       Personas de todos los géneros están invitadas a asistir a los eventos regionales de WiDS, que tienen como objetivo inspirar y educar a los científicos de datos a través de mujeres que destacan por su trabajo excepcional y al mismo modo contribuyen a la visibilidad de ellas en este campo.          
