--- a/_includes/sections_2020/header.html
+++ b/_includes/sections_2020/header.html
@@ -8,7 +8,7 @@
     
         <div class="intro__text">
             <h1 class="title">Women in Data Science Valencia </h1>            
-            <h2>5 de marzo 2020 | 15:00</h2>
+            <h2>5 de marzo 2020 | 15:00: Taller | 18:30: Conferencia</h2>
             <h2>Salón de actos, ETSINF, UPV</h2>            
         </div> 
         <div class="button__ticket">
