--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,6 +26,7 @@
                 <li><a href="#workshops">Talleres</a></li>
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#partners">Colaboradores</a></li>
+                <li><a href="#location">Lugar</a></li>
                
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ediciones<span class="caret"></span></a>
