speakers and contributors added

--- a/_includes/sections_2020/header.html
+++ b/_includes/sections_2020/header.html
@@ -5,19 +5,19 @@
                 <img src="assets/images/2020/logo_widsvlc.png" alt="logo WiDS Valencia">
             </a>
         </div>
-    
+
         <div class="intro__text">
-            <h1 class="title">Women in Data Science Valencia </h1>            
-            <h2>5 de marzo 2020 | 15:00: Taller | 18:30: Conferencia</h2>
-            <h2>Salón de actos, ETSINF, UPV</h2>            
-        </div> 
+            <h1 class="title">Women in Data Science Valencia </h1>
+            <h2>5 de marzo 2020 | 15:00: Talleres | 18:00: Conferencia</h2>
+            <h2>Salón de actos, ETSINF, UPV</h2>
+        </div>
 
         <!--
         <div class="button__ticket">
             <a class="cta" href="{{site.attendees_form}}" target="_blank">Obtén tu entrada</a>
         </div>
-        -->   
+        -->
 
     </section>
 
-</header>   
+</header>
