--- a/_includes/sections_2020/apply.html
+++ b/_includes/sections_2020/apply.html
@@ -5,7 +5,7 @@
     </h1>
     <hr>
       <p>
-        Por temas logísticos nos gustaría tener una previsión de las personas que asistirán al evento. Si estás interesad@ en asistir, reserva tu entrada.
+        Nos gustaría tener una previsión de las personas que asistirán al evento. Si estás interesad@ en asistir, reserva tu entrada.
       </p>
       <p>
         <a class="cta" href="{{site.attendees_form}}" target="_blank">Obtén tu entrada</a>
