--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 
 $footer-text: #666666;
 $main-color: #333333;
-$accent-color: #9dd942; /*555555*/
+$accent-color: #00B140;
 $white-color: white;
 $text-color: #111111;
 * {
