--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -105,6 +105,7 @@ section {
 
   p {
     font-size: 18px;
+    line-height: 30px;
     a {
       text-decoration: none;
       border-bottom: 6px solid #fa0;
