Change twitter class to social_media

--- a/_includes/sections_2020/workshop.html
+++ b/_includes/sections_2020/workshop.html
@@ -9,7 +9,7 @@
       <div class="workshop">
         <h3>{{workshop.name}}</h3>
 
-        <p class="twitter">
+        <p class="social_media">
           {% if workshop.twitter != "" and workshop.twitter != nil %}
             <a href="https://twitter.com/{{workshop.twitter}}" target="_blank" title={{workshop.twitter}}>
             @{{workshop.twitter}}
