--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -1,3 +1,5 @@
+<div class="shape-fill"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3a2c41" fill-opacity="1" d="M0,96L1440,288L1440,320L0,320Z" >></path></svg>
+</div>
 <section id="workshops" class="section-accent">
   <div>
     <h1>
