--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,8 +19,9 @@ Website for the Women in Data Science event  </i>     </a>
                 <a class="btns" target="_blank" href="mailto:abc@gmail.com">
                     <i aria-hidden="true" class="fa fa-envelope-o fa-lg"></i>
                 </a>
-               <!--  <a class="btns" target="_blank" href="https://github.com/vlctechhub/">
-                    <i aria-hidden="true" class="fa fa-github fa-lg"></i> -->
+                
+                <a class="btns" target="_blank" href="https://github.com/hamzahanif2210/physics-camp-for-girl">
+                    <i aria-hidden="true" class="fa fa-github fa-lg"></i> 
                 </a>
                 <br>
             </div>
