--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -6,24 +6,27 @@
       Distinguished Speakers
     </h1>
     <hr>
-    <div class="workshops__2020">
-      
-         <div class="speaker">
-        <img src=/assets/images/speakers/gemma_galdon.jpeg alt=Gemma Galdón class="avatar">
-        <h3>Sana Naz</h3>
+
+
+
+    <div class="speakers">
+      {% for speaker in site.data.2020.workshop %}
+      <div class="speaker">
+        <img src={{speaker.avatar}} alt={{speaker.name}} class="avatar">
+        <h3>{{speaker.name}}</h3>
         <p class="social_media">
-        
-        
-          <a class="social_media__icon" href="https://www.linkedin.com/in/gemmagclavell" target="_blank" title=gemmagclavell>
+
+        {% if speaker.linkedin != "" and speaker.linkedin != nil %}
+          <a class="social_media__icon" href="https://www.linkedin.com/in/{{speaker.linkedin}}" target="_blank" title={{speaker.linkedin}}>
             <i aria-hidden="true" class="fa fa-linkedin fa-lg"></i>
           </a>
-        
+        {% endif %}
         </p>
         <p class="bio">
-Short Bio
+         {{speaker.bio}}
         </p>
       </div>
-      
+      {% endfor %}
     </div>
-  </div>
+</div>  
 </section>
