--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -385,6 +385,16 @@ footer {
   }
 }
 
+
+@media (max-width: 425px) {
+.table>tbody>tr>td,.table>tbody>tr>th,.table>tfoot>tr>td,.table>tfoot>tr>th,.table>thead>tr>td,.table>thead>tr>th{
+  padding: 0;
+  font-size: 10px;
+
+}
+}
+
+
 @media (max-width: 1330px) {
   .speakers {
    grid-template-columns: 1fr 1fr;
